--- a/EphemeralAddons/composer.json
+++ b/EphemeralAddons/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "ephemeral/EphemeralAddons",
+  "name": "ephemeral/oauth2",
   "description": "Silex addons for the Ephemeral Project",
   "minimum-stability": "stable",
   "license": "proprietary",
